# ahc031

./: .gitignore  Cargo.toml  Start-LocalBenchmark.ps1  Start-SingleCase.ps1  diary.md  pyproject.toml  runner_config.json  runner_config_original.json
py/: opt_sample.py  optimize.py  predict.py  show_dist.py
relative_score/: Cargo.toml
relative_score/src/: main.rs
src/: common.rs  main.rs  params.rs  problem.rs  solver.rs
src/problem/: annealier2d.rs  bin_packing.rs  break_and_best_fit.rs  climbing.rs  first_fit.rs
src/problem/bin_packing/: step1.rs  step2.rs  width_divide.rs
src/solver/: annealier2d.rs  bin_packing.rs  first_fit.rs  score_one.rs
src/solver/bin_packing/: step1.rs  step2.rs
src/solver/first_fit/: step1.rs  step2.rs
testcases/: a.yml
